# any-cpp

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.47E89FA0DC38882C.idx
src/: any.hpp  main.cpp
test/: main_test.cpp
